--- a/src/app.css
+++ b/src/app.css
@@ -1,3 +1,18 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+html {
+  scroll-behavior: smooth;
+}
+
+* {
+  font-family: 'Roboto Slab', sans-serif;
+}
+
+h1,
+h2,
+h3,
+.source3 {
+  font-family: 'Roboto Mono', sans-serif;
+}
