--- a/src/app.css
+++ b/src/app.css
@@ -17,6 +17,10 @@ h3,
   font-family: 'Roboto Mono', sans-serif;
 }
 
+.footer {
+  width: 100%;
+}
+
 #profile {
   transform: scaleX(-1);
   border-top-right-radius: 220px;
